kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-landing
spec:
  selector:
    app: consul-landing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
