kustomize/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlameter-landing
  labels:
    app: parlameter-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlameter-landing
  template:
    metadata:
      labels:
        app: parlameter-landing
    spec:
      containers:
      - name: parlameter-landing
        image: parlameter-landing
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: parlameter-landing
spec:
  selector:
    app: parlameter-landing
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parlameter-landing
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - parlameter.org
    secretName: parlameter-landing-tls
  rules:
  - host: parlameter.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: parlameter-landing
            port:
              number: 80
