kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul-landing
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - consul.djnd.si
        - consul.danesjenovdan.si
      secretName: consul-landing-tls
  rules:
    - host: consul.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: consul-landing
                port:
                  number: 80
    - host: consul.danesjenovdan.si
      http: *http_paths
